# otus-cpp

./: CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp
.github/workflows/: release.yml
lib/: CMakeLists.txt
lib/version/: CMakeLists.txt
lib/version/src/: lib.cpp
libs/: CMakeLists.txt
libs/gtest_framework/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libs/gtest_framework/googletest/: CMakeLists.txt
libs/test/: CMakeLists.txt
main/: CMakeLists.txt  unittest.cmake
main/include/helloworld/: version_api.h
main/include/version_api/: version_api.h
main/src/: main.cpp  version_api.cpp
main/test/: main.cpp  test_version_api.cpp
